A bit of a cleanup on auth and modified swagger docs
